
Changes in version 0.3.xx 2019-xx-xx
     + Can now read Bruker 2D NMR spectra exported from TopSpin vis "tojdx".
     + Debug options are now more consistent, documentation improved, and a new debug level was added.
     + Checking of x values was relaxed a bit, and made more sensible.
     + Fixed a bug in which DUP codes longer than a single character (e.g. "S2") returned the wrong answer.
     + Internal handling of mode/fmt was simplified.
     + decompressJDXxyy renamed decompressXYY.

Changes in version 0.3.250 2018-10--15
     + Checked against R devel r75432 which is R 3.5.1 patched.
     + README.md updated.
     + Checked against testbank.
     + ORCID added to DESCRIPTION.
     + Minor update to the vignette.

Changes in version 0.3.248 2018-08-24
     + Checked against R devel r75161 which is R 3.5.1 patched.

Changes in version 0.3.247 2018-06-30
     + Rebuilt how duplicates are handled, so that S2, which is a valid DUP string = 12, is handled correctly.

Changes in version 0.3.215 2017-01-24
     + Improvements to vignette and documentation.
     + Improvements to the debugging output options.

Changes in version 0.3.194 2017-01-23
     + Return structure now includes the comment only lines found outside of the metadata.
     + Much more robust handling of comments.
     + All test files seem to work.
     + Still a lot of polishing needed.

Changes in version 0.3.103 2017-01-13
     + Return structure now includes a data guide giving the lines where each piece of the file was parsed (improves error reporting, but needs further tweaking).
     + Will now read 2D NMR spectra in NTUPLES format (at least in the only case I have available right now).
     + Updated vignette to pinp style.  

Changes in version 0.2.1 2016-12-21
     + Fixed issue #3, problem with x values not having the correct absolute value.  Reported by Rustam.
     + Added checks for FIRSTX, LASTX.
     + Added PCRF.JDX, SBO.JDX and SBO.JDX to inst/extdata for example purposes.